force-app/main/default/objects/OM_LogGroup__c/OM_LogGroup__c.object-meta.xml
<CustomObject>
    <label>Log group</label>
    <nameField>
        <displayFormat>LOGGR-{0000}</displayFormat>
        <label>Log group name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>