force-app/main/default/objects/OM_LogGroup__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>