force-app/main/default/objects/OM_LogGroup__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user generating the records</description>
    <inlineHelpText>Lookup to the user generating the records</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LogGroups</relationshipName>
    <type>Lookup</type>
</CustomField>